--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -31,6 +31,7 @@ $twitch-purple: #954fff;
                 span {
                     font-size: 16px;
                     text-transform: uppercase;
+                    letter-spacing: 1px;
                     color: white;
                 }
             }
