--- a/src/app/twitch/pages/channels/channels.component.html
+++ b/src/app/twitch/pages/channels/channels.component.html
@@ -2,12 +2,28 @@
 <div class="card-container">
 
     <div class="card" *ngFor="let stream of streams">
-        <img src="{{ stream.thumbnailUrl | thumbnailImage:'1280':'720' }}" alt="{{ stream.userName }}">
-        <span class="opacity"></span>
-        <div class="card-content">
-            <span id="username">{{ stream.userName }}</span>
-            <span id="title">{{ stream.title }}</span>
+        
+        <div class="card-overlay">
+
+            <img src="{{ stream.preview | thumbnailImage:'1280':'720'  }}" alt="{{ stream.channel }}">
+            
+            <div class="card-overlay-container">
+                <p class="live">LIVE</p>
+            </div>
+
         </div>
+
+        <div class="card-info">
+
+            <img src="{{ stream.logo | thumbnailImage:'45':'45' }}" alt="{{ stream.channel }}">
+
+            <div class="card-info-text">
+                <h3 id="stream-title">{{ stream.title }}</h3>
+                <h4 id="channel-subtitle">{{ stream.channel }}</h4>
+                <h4 id="channel-subtitle">{{ stream.game }}</h4>
+            </div>
+        </div>
+        
     </div>
 
 </div>
