--- a/src/app/twitch/pages/channels/channels.component.scss
+++ b/src/app/twitch/pages/channels/channels.component.scss
@@ -1,51 +1,102 @@
 
+$twitch-purple: #954fff;
+
 .card-container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: row; // dirección de los elementos
+    flex-wrap: wrap; // permite que se coloquen en varias lineas
     padding: 16px;
 
     .card {
-        flex-basis: 580px;
-        flex-grow: 1;
+        flex-grow: 1; // para que todas las card ocupen el mismo espacio en la linea
+        flex-basis: 280px; // tamaño mínimo para reescalar las card
         margin: 16px;
-        overflow: hidden;
-        position: relative;
 
-        img {
+        .card-overlay {
             width: 100%;
-            height: 100%;
-            z-index: 1;
+            position: relative;
+            overflow: hidden;
+            cursor: pointer;
+            transition: all 300ms;
+
+            img {
+                width: 100%;
+                z-index: 1;
+                position: relative;
+            }
+            
+            .card-overlay-container {
+                width: 100%;
+                aspect-ratio: 16/9;
+                z-index: 3;
+                position: absolute;
+                top: 0;
+                right: 0;
+
+                .live {
+                    font-size: 13px;
+                    font-weight: 700;
+                    letter-spacing: 1px;
+                    color: white;
+                    background-color: red;
+                    border-radius: 5px;
+                    padding-left: 4px;
+                    padding-right: 4px;
+                    padding-bottom: 1px;
+                    margin: 6px;
+                    width: fit-content;
+                }
+            }
         }
 
-        .opacity {
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 2;
-            position: absolute;
-            top: 0;
-            right: 0;
+        .card-overlay:hover {
+            transform: scale(1.03, 1.03);
         }
 
-        .card-content {
-            width: 100%;
-            height: 100%;
-            color: white;
-            z-index: 3;
-            position: absolute;
-            top: 0;
-            right: 0;
+        .card-info {
+            margin-top: 6px;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
 
-            #username {
-
+            img {
+                border-radius: 999px;
+                width: 45px;
+                height: 45px;
             }
 
-            #title {
-                white-space: nowrap;
-                text-overflow: ellipsis;
+            .card-info-text {
+                margin-left: 12px;
+                flex-grow: 1;
+                width: 0px; // no entiendo por qué, pero esto evita que los hijos crezcan más que el padre
+
+                #stream-title {
+                    width: auto;
+                    max-width: max-content;
+                    font-size: 15px;
+                    font-weight: 600;
+                    color: #EEE;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    cursor: pointer;
+                }
+        
+                #channel-subtitle {
+                    width: auto;
+                    max-width: max-content;
+                    font-size: 13px;
+                    font-weight: normal;
+                    color: #999;
+                    cursor: pointer;
+                }
+
+                #channel-subtitle:hover,
+                #stream-title:hover {
+                    color: $twitch-purple;
+                }
             }
         }
+
     }
 }
