--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -16,9 +16,9 @@
                     <span>Channels</span>
                 </li>
                 <li
-                    routerLink="games"
+                    routerLink="categories"
                     routerLinkActive="active">
-                    <span>Games</span>
+                    <span>Categories</span>
                 </li>
                 <li
                     routerLink="follows"
