--- a/src/app/twitch/components/category/category.component.scss
+++ b/src/app/twitch/components/category/category.component.scss
@@ -4,7 +4,7 @@ $twitch-purple: #954fff;
 
 .card-overlay {
     width: 100%;
-    aspect-ratio: 9/16;
+    aspect-ratio: 11/15;
     position: relative;
     overflow: hidden;
     cursor: pointer;
@@ -12,6 +12,7 @@ $twitch-purple: #954fff;
 
     img {
         width: 100%;
+        height: 100%;
         position: relative;
     }
 }
