--- a/src/app/twitch/pages/channels/channels.component.html
+++ b/src/app/twitch/pages/channels/channels.component.html
@@ -1,6 +1,14 @@
-<div class="card-container">
-    <app-channel
-        *ngFor="let stream of streams"
-        [stream]="stream">
-    </app-channel>
+<div
+    id="loading"
+    *ngIf="!streams; else streamCards">
+    <p>Loading...</p>
 </div>
+
+<ng-template #streamCards>
+    <div class="card-container">
+        <app-channel
+            *ngFor="let stream of streams"
+            [stream]="stream">
+        </app-channel>
+    </div>
+</ng-template>
